--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.zenbarrier.zencompass">
 
     <uses-feature android:name="android.hardware.type.watch" />
+    <uses-feature android:name="android.hardware.sensor.compass" android:required="true"/>
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
